--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,30 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="359dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="111dp"
-        android:layout_marginEnd="102dp"
-        android:layout_marginBottom="575dp"
-        android:ems="10"
-        android:inputType="text"
-        android:text="Add Your Name"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.493"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="80dp"
+        android:padding="20dp"
+        android:orientation="vertical"
+        tools:ignore="MissingConstraints">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Name Identification"
+            android:paddingTop="70dp"
+            android:textSize="25dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:paddingBottom="40dp"/>
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="219dp"
-        android:layout_height="49dp"
-        android:text="Submit"
-        tools:layout_editor_absoluteX="96dp"
-        tools:layout_editor_absoluteY="202dp"
-        tools:ignore="MissingConstraints" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add your name"
+            android:id="@+id/txtAmount"
+            android:paddingBottom="20dp"/>
+
+        <Button
+            android:id="@+id/btnSend"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Submit Name"
+            android:layout_marginTop="20dp"
+            app:backgroundTint="#9f0000"
+            android:onClick="saveName"/>
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
