--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,7 @@
             android:textSize="25dp"
             android:textAlignment="center"
             android:textStyle="bold"
+            android:textColor="@color/main"
             android:paddingBottom="40dp"/>
 
         <EditText
@@ -30,20 +31,32 @@
             android:paddingBottom="20dp"
             android:hint="Your Name"/>
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/phoneField"
+            android:paddingBottom="20dp"
+            android:hint="Phone Number"/>
+
         <Button
             android:id="@+id/insertName"
             android:layout_width="372dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:onClick="saveName"
-            android:text="Submit Name"
+            android:text="Submit"
             app:backgroundTint="#9f0000" />
 
         <Button
             android:id="@+id/viewNames"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="View names" />
+            android:text="View Contacts" />
+        <Button
+            android:id="@+id/readArticles"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Read Articles" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
