--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,7 +56,7 @@
             android:id="@+id/readArticles"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Read Articles" />
+            android:text="Read NEWS" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
